--- a/styles/style.css
+++ b/styles/style.css
@@ -7,14 +7,17 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.main-section {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 200px;
-  background-image: linear-gradient(to bottom, #1c5380, #06365f );
-
+  padding: 120px 400px 50px 400px;
+  background-image: linear-gradient(to bottom, #1c5380 40%, #ffffff 0%);
 }
+
 
 h1 {
   color: #1c5380;
@@ -45,8 +48,8 @@ em {
   padding: 5px 40px;
   border-radius: 8px;
   width: 480px;
-  background-image: linear-gradient(to bottom, #fff, rgba(255,255,255, 0));
-  box-shadow: 8px, 5px, #000;
+  background-image: linear-gradient(to bottom, #fff 50%, rgba(255,255,255, 0));
+  box-shadow: 0px, 0px, 5px, 10px, #000;
   
 }
 
@@ -66,7 +69,7 @@ em {
   flex-direction: row;
   justify-content: center;
   background-image: linear-gradient(to bottom, #1c5380, #06365f );
-  padding: 10px;
+  padding: 10px 10px 0px 10px;
   border-radius: 5px;
   border: solid 1px #06365f; 
 }
@@ -94,4 +97,33 @@ em {
 
 .iphones {
   height: 650px;
+}
+
+
+footer ul {
+  list-style-type: none;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bolder;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 450px;
+  margin-right: 450px;
+  font-style: normal;
+  color: #06365f;
+  font-size: 13px;
+}
+
+.footer-txt {
+  text-decoration: none;
+  font-weight: bold;
+  color: #316d9e;
+  
+}
+
+.footer-txt2 {
+  text-decoration: none;
+  font-weight: bold;
+  color: #8a8c8f;
 }
