--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ em {
   width: 480px;
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 560px 400px;
 
 
   
@@ -74,7 +74,8 @@ em {
   background-image: linear-gradient(to bottom, #1c5380, #06365f );
   padding: 10px 10px 0px 10px;
   border-radius: 5px;
-  border: solid 1px #06365f; 
+  border: solid 1px #06365f;
+  margin-right: 8px; 
 }
 
 .home-icon {
@@ -125,13 +126,6 @@ footer a {
 }
 
 .footer-txt {
-  text-decoration: none;
-  font-weight: bold;
-  color: #316d9e;
-  
-}
-
-.footer-txt2 {
   text-decoration: none;
   font-weight: bold;
   color: #8a8c8f;
