--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@ body {
 section {
   display: flex;
 }
-
 a {
   color: black;
   text-decoration: none;
@@ -37,6 +36,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 4%;
 }
 .login.btn {
   border: 2px solid #1c5380;
@@ -44,11 +44,8 @@ h1 {
   height: 35px;
   background: linear-gradient(to bottom, #688dad 0%, #4e7699 100%);
   border-radius: 5px;
-}
-.login.btn a {
   color: white;
   font-weight: 900;
-  margin-left: 10px;
 }
 .text {
   margin-left: 5%;
@@ -62,7 +59,7 @@ h1 {
   margin-top: 5%;
 }
 .card p {
-  margin: 3% 0;
+  margin: 3% 2%;
   font-weight: 400;
   color: #878788;
 }
@@ -99,4 +96,8 @@ footer ul a {
 }
 #home {
   width: 35px;
+  padding-right: 10px;
+}
+#LogIn {
+  margin-left: 10px;
 }
