--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@ em {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 35px;
 }
 
@@ -72,10 +73,11 @@ em {
   flex-direction: row;
   justify-content: center;
   background-image: linear-gradient(to bottom, #1c5380, #06365f );
-  padding: 10px 10px 0px 10px;
+  padding: 10px 10px 10px 10px;
   border-radius: 5px;
   border: solid 1px #06365f;
   margin-right: 8px; 
+  align-items: center;
 }
 
 .home-icon {
