--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,39 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin:  0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+
+.navigation-footer{
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+}
+
+.footer-nav{
+  font-size: small;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  color: #1c5380;
+}
+
+.reg {
+  color: lightgray;
+  font-weight: bold;
+}
+
+
+
+
+
+
