--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,137 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin:0px;
+  padding: 0px;
+}
+a {
+  text-decoration: none;;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding: 5% 7.5%; */
+}
+
+body::before {
+  width: 100%;
+  height: 40%;
+  content: '';
+  display: block;
+  position: absolute;
+  background: rgb(6,54,95);
+background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 35%);
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+}
+.wrapper {
+  max-width: 700px;
+  width: 100%;
+  max-height: 415px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 0 auto;
+
+}
+div.img_mobile {
+  max-width: 260px;
+  width: 100%;
+  max-height: 415px;
+  height: 100%;
+  display: block;
+  position: relative;
+  background-image: url('../images/phones.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 22px;
+}
+div.content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+ 
+}
+header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  align-items: center;
+  
+}
+header img {
+  width: 255px;
+  height: 60px;
+}
+header a {
+  color:#e0e9ef;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 35%);
+  padding: 8px 10px;
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
+}
+header a img {
+  width: 22px;
+  height: 19px;
+  margin-right: 10px;
+}
+article {
+  background-image: url('../images/frame.png');
+  background-position: center ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 22px;
+}
+
+
+
+
+footer {
+  width: 100%;
+  display: block;
+  position: relative;
+}
+footer ul{
+  width: 50%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+}
+footer ul li {
+  list-style: none;
+}
+footer ul li a {
+  font-size: 12px;
+  font-weight: bold;
+  color:#06365f;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+footer ul li p {
+  font-size: 12px;
+  font-weight: bold;
+  color:#979797;
+  text-decoration: none;
+  text-transform: uppercase;
 }
