--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,59 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: linear-gradient(
+    to bottom, #4e7699 0%, #386185 40%,
+    white 30%, white 100%
+  );
+}
+section {
+  display:flex;
+  padding-top: 60px;
+  padding-left: 60px;
+}
+.frame{
+  background-image:  url(/Week1/DAY1/lab-css-instagram-clone/images/frame.png);
+  background-repeat: no-repeat;
+  max-width: 480px;
+  padding: 20px 10%;
+  }
+  .main{
+    margin-left: 150px;
+  }
+a {
+  text-decoration: none;
+}
+h1{
+  color: #06365f;
+  
+}
+
+.Instagram {
+  display:flex;
+  padding:60px 50px 10px 50px;
+}
+
+.login{
+  border: 1px solid #06365f;
+  border-radius: 2px;
+  padding: 10px 10px;
+  color:white;
+  text-decoration: none;
+}
+.movil{
+  padding: 10px 20px 10px 50px;
+}
+footer ul {
+   text-transform: uppercase;
+   display:flex;
+   text-align: center;
+   list-style: none;
+   justify-content: space-between;
+   margin: 50px 18%;
+   font-size: 12px;
+   font-weight: bold;
+   color:#bbbbbb;
+}
+footer ul a{
+  color:#5d84a5;
 }
