--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,76 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  text-align: center;
+  padding: 100px;
+}
+
+a{
+  text-decoration: none;
+}
+.content{
+  display: flex;
+  column-gap: 50px;
+}
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 15px;
+  padding-bottom: 20px;
+}
+
+.content article {
+  box-shadow: 0px -5px 5px 0px rgb(50 50 50 / 75%);
+    border-radius: 3px;
+    padding: 10px 30px;
+    text-align: left;
+}
+.content article h1{
+  color: #06365f;
+}
+.content article p{
+  font-size: 15px;
+}
+.content article a{
+  margin: 20px 15px 0px 0px;
+}
+
+.home{
+  color: white;
+  background-color: #1c5380;
+  border-radius: 3px;
+  padding: 7px;
+  font-size: 12px;
+  font-weight: bold;
+  border: solid 1px #06365f;
+
+}
+.home img{
+  height: 20px;
+  margin-right: 7px;
+  margin-bottom: -6px;
+}
+
+footer{
+  margin-top: 50px;
+}
+li{
+  font-size: 11px;
+  font-weight: bold;
+  list-style-type: none;
+  display: inline;
+  justify-content: center;
+  margin: 0px 7px;
+  
+} 
+.blue{
+  color: #1c5380;
+}
+.gray{
+  color: gray;
 }
