--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,117 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 60px 200px 60px 300px; 
+  background: url("bgtile.png") top center repeat-x;
 }
+
+.section1 {
+  display: flex;
+  flex-direction: row;
+	align-items: center;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+	align-items: center;
+}
+
+.iphon{
+  width: 460px;
+}
+
+.div1 {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.img-instagram {
+  width: 450px;
+  margin: 0px 120px 10px 0px;
+}
+
+.div1 button img {
+  width: 30px;
+  padding: 3px 10px 3px 3px;
+}
+
+.div1 button {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: #3576ac;
+  padding: 8px 20px 8px 10px;  
+  border-radius: 5%;
+  border-color: black;
+  font-size: 20px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 40px;
+  font-weight: bold;
+  width: 420px;
+  margin: 20px;
+}
+
+p {
+  font-size: 20px;
+  margin: 8px;
+}
+
+article {
+  display: flex;
+  background-image: url("frame.png");
+  background-position: 0 0;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  flex-direction: column;
+  width: 600px;
+  padding: 10px 60px;
+  text-align: left; 
+  margin: 10px 60px;
+}
+
+
+.stores{
+  margin: 40px 0px;
+}
+
+.stores img {
+  margin: 0px 10px;
+  width: 200px;
+}
+
+footer {
+  display: flex;
+	justify-content: center;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;  
+  flex-direction: row;
+  font-weight: bold;
+  align-items: center;
+}
+
+footer li{
+  margin: 50px 15px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380
+}
+
+.copyright {
+  color: #1c538052
+}
+
