--- a/styles/style.css
+++ b/styles/style.css
@@ -11,42 +11,46 @@ a {
   text-decoration: none;;
 }
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  letter-spacing: 1.5px;
+  font-weight: 200;
   margin: 0;
   width: 100%;
   height: 100vh;
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+   
   /* padding: 5% 7.5%; */
 }
 
 body::before {
   width: 100%;
-  height: 40%;
+  max-height: 225px;
+  height: 100%;
   content: '';
   display: block;
   position: absolute;
-  background: rgb(6,54,95);
-background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 35%);
+  /* background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 35%); */
+  background: rgb(79,125,162);
+background: linear-gradient(180deg, rgba(79,125,162,1) 0%, rgba(49,96,136,1) 35%);
   top: 0px;
   left: 0px;
   z-index: 0;
 }
 .wrapper {
-  max-width: 700px;
+  max-width: 790px;
   width: 100%;
-  max-height: 415px;
-  height: 100%;
+  height: 415px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
   position: relative;
-  margin: 0 auto;
-
+  margin:0 auto;
+  margin-top: 72px;
+  margin-bottom: 50px;
 }
 div.img_mobile {
   max-width: 260px;
@@ -58,21 +62,27 @@ div.img_mobile {
   background-image: url('../images/phones.png');
   background-size: contain;
   background-repeat: no-repeat;
-  margin-right: 22px;
+  margin-right: 30px;
+  order: 1;
 }
 div.content {
-  width: 100%;
+  max-width: 405px;
+  width: 100%; 
+  height: 414px;
   display: flex;
   flex-direction: column;
- 
+  /* justify-content: space-between; */
+ margin-bottom: 50px;
+ order:2;
 }
 header {
-  width: 100%;
+  width: 415px; 
   display: flex;
   flex-direction: row;
   justify-content:space-between;
   align-items: center;
-  
+  padding: 0px 5px;
+  margin-bottom: 20px;
 }
 header img {
   width: 255px;
@@ -80,15 +90,17 @@ header img {
 }
 header a {
   color:#e0e9ef;
+      font-size: 12px;
   font-weight: bold;
   display: flex;
   align-items: center;
-  background: rgb(6,54,95);
-  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 35%);
+  background: rgb(104,146,178);
+  background: linear-gradient(180deg, rgba(104,146,178,1) 0%, rgba(68,117,157,1) 35%);
   padding: 8px 10px;
-  -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
-  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.1);
+  border-radius: 2px;
 }
 header a img {
   width: 22px;
@@ -96,14 +108,53 @@ header a img {
   margin-right: 10px;
 }
 article {
-  background-image: url('../images/frame.png');
-  background-position: center ;
+  max-width: 355px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/frame.png);
+  background-position: top;
   background-repeat: no-repeat;
-  background-size: cover;
-  padding: 22px;
+  background-size: contain;
+  padding: 35px 35px 0px 35px;
+  border-radius: 20px;
+}
+article h1 {
+  color: #06365f;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+article p {
+  color: #535354;
+  font-size: 11px;
+  line-height: 18px;
+  font-weight: 500;
+  letter-spacing: .9px;
+  margin-bottom: 10px;
+}
+article p.last-child {
+  margin-bottom: 35px;
 }
 
-
+.btn-cont {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+.btn-cont a img{
+ width: 135px;
+ height: 43px;
+ display: block;
+ position: relative;
+}
+.btn-cont a:first-child {
+  margin-right: 20px;
+ }
 
 
 footer {
@@ -112,7 +163,8 @@ footer {
   position: relative;
 }
 footer ul{
-  width: 50%;
+  max-width: 465px;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -124,16 +176,69 @@ footer ul li {
   list-style: none;
 }
 footer ul li a {
-  font-size: 12px;
+  font-size: 8px;
   font-weight: bold;
-  color:#06365f;
+  color:#46779e;
   text-decoration: none;
   text-transform: uppercase;
 }
 footer ul li p {
-  font-size: 12px;
+  font-size: 8px;
+  line-height: 8px;
   font-weight: bold;
   color:#979797;
   text-decoration: none;
   text-transform: uppercase;
+  padding-top: 5px;
+}
+@media only screen and (max-width: 768px) {
+  body::before {
+    max-height: 170px;
+    height: 100%;
+}
+  .wrapper {
+    max-width: 465px;
+    width: 100%;
+    height: 900px;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 25px;
+    margin-bottom: 0px;
+  }
+  div.img_mobile {
+    margin: 0 auto;
+    order: 2;
+  }
+  div.content {
+    max-width: 405px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    order: 1;
+  }
+  footer  {
+    width: 90%;
+    margin: 0 auto;
+  }
+  footer ul{
+    flex-wrap: wrap;
+  }
+  footer ul li {
+    padding: 0px 3px 0px 3px;
+  }
+}
+@media only screen and (max-width: 500px) { 
+  header {
+     width: 100%;
+     padding: 0px;
+  }
+  article {
+    max-width: none;
+    width: 91%;
+    padding: 5% 5% 0px 5%;
+    border-radius: 20px;
+    margin: 0 auto;
+}
 }
