--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,7 @@ margin-top: 80px;
   position: absolute;
   top: 10px;
   left: 20%;
+  color: #1c5380;
 }
 .div2texto{
   text-align:left;
@@ -72,6 +73,9 @@ margin-top: 80px;
   top: 10px;
   right: 90px;
   left: 20%;
+}
+.black{
+  font-weight: bold;
 }
 
 .logos{
