--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,117 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Helvet Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: linear-gradient(to bottom, #1c5380 34%, #ffffff 34%);
+  background-repeat: no-repeat;
+}
+.container{
+  width: 100%;
+  height: 70%;
+  position:relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 60px;
+}
+
+.right_section{
+  margin-left: 30px;
+
+}
+
+.brand{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.home{
+  margin-right: 10px;
+}
+
+.login{
+  color: white;
+  text-decoration: none;
+  font-weight: 900;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.frame{
+  height: 300px;
+  width: 500px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+
+}
+p{
+ margin-left: 40px;
+ letter-spacing: 1px;
+ font-weight: 300;
+ font-size: 14px;
+}
+
+.subtitle{
+  font-weight: 600;
+  font-size: 23px;
+  color: #06365f;
+  margin-left: 40px;
+  padding-top: 25px;
+  margin-bottom: -10px;
+  letter-spacing: 1px;
+}
+.badges{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#iphone{
+  margin-right: 35px;
+}
+
+a.footer_links{
+  color: #1c5380;
+  font-weight: 900;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+}
+
+li{
+float: left;
+text-decoration: none;
+list-style-type: none;
+margin-left: 21px;
+margin-top: 58px;
+color: gray;
+font-weight: 600;
+}
+
+.last_li{
+  font-size: 10px;
+}
+
+.list_section{
+  display: flex;
+  align-items: center;
+}
+
+.login{
+  border: #50779a solid 1px;
+  padding: 10px;
+  border-radius: 5%;
+  background-color: #6389a9;
+  box-shadow:2px 2px 2px #3c3e40;
+  margin-right: 6px;
 }
