--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,98 @@
-/*
+    /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+    
+    body {
+        font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+        margin: 0;
+        overflow-x: hidden;
+        background: linear-gradient(180deg, #497194 40%, #FFFFFF 40%);
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .border {
+        /*
+        border: 1px solid black;
+        */
+    }
+    
+    .h100 {
+        height: 100%;
+    }
+    
+    .w100 {
+        width: 100%;
+    }
+    
+    #main {
+        width: 80%;
+        height: 80%;
+        display: block;
+    }
+    
+    .t-div {
+        height: 80%;
+        width: 100%;
+    }
+    
+    .b-div {
+        height: 20%;
+        width: 100%;
+        align-items: end;
+    }
+    
+    .b-div li:hover {
+        cursor: pointer;
+    }
+    
+    .l-div {
+        width: 30%;
+        height: 100%;
+    }
+    
+    .r-div {
+        width: 60%;
+        height: 100%;
+        display: block;
+    }
+    
+    ul#nav li {
+        display: inline;
+        color: #6387a6;
+        font-size: 1.2rem;
+        font-weight: bolder;
+    }
+    
+    .description {
+        background-image: url("../images/frame.png");
+        background-size: 100%;
+        border-radius: 11px;
+        padding: 15px;
+        width: 75%;
+        background-repeat: no-repeat;
+        padding-top: 20px;
+    }
+    
+    p {
+        font-size: 1.25rem;
+    }
+    
+    li {
+        font-weight: bold!important;
+        padding: 7px;
+        font-size: 1.25rem;
+    }
