--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,68 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
+#1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+
+    /*background-color: #06365f;*/
+}
+
+#body {
+    display: flex;
+    justify-content: space-around;
+    margin: 80px 80px 20px 80px;
+}
+
+#body .page-left img{
+height: 600px;
+}
+
+#body .page-right {
+    display: flex;
+    flex-direction: column;
+    width:400px;
+    justify-content: center;
+}
+#body .page-right-landing {
+
+    background-image: url("/images/frame.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#body .page-right-login{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+#body .page-right-login-btn button{
+    background-color: #1c5380;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+}
+#body .page-right-badges{
+    display: flex;
+    justify-content: space-around;
+}
+#body .page-right-landing h2{
+    color: #1c5380;
+}
+footer {
+
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
 }
