--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,103 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+
+/* * {
+  border: 1px solid black;
+} */
+
+#header {
+  height: 300px;
+  background: #1C5380;
+background: -moz-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
+background: -webkit-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
+background: linear-gradient(to bottom, #1C5380 0%, #2388CB 0%, #06365f 100%);
+}
+
+
+
+.insta-log-in {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.insta-log-in button {
+  border: none;
+  background: #1C5380;
+background: -moz-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
+background: -webkit-linear-gradient(top, #1C5380 0%, #2388CB 0%, #06365f 100%);
+background: linear-gradient(to bottom, #1C5380 0%, #2388CB 0%, #06365f 100%);
+  color: white;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.insta-log-in button img {
+  margin: 5px;
+}
+.insta-log-in button p {
+  margin: 5px;
+}
+/* .button {
+  
+} */
+
+.box {
+  border-radius: 6px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+
+}
+
+.box div {
+  color: white;
+  width: 400px;
+  
+}
+
+.section {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* align-items: center; */
+}
+
+#main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone {
+  margin-right: 50px;
+}
+
+.footer li:nth-child(-n+8) {
+  color: #1c5380; 
+  margin: 10px;  
+}
+
+.footer li:nth-child(n+9) {
+  color: grey;
+  margin: 10px;   
+}
+
+.footer {
+  font-weight: bold;
+  font-size: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  
 }
